# ansible-rabbitmq

./: .ansible-lint  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  README.md  playbook.yml  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
.github/: settings.yml
.github/workflows/: default.yml  dep-update.yml  release-galaxy.yml
defaults/: main.yml
handlers/: main.yml
meta/: .galaxy_install_info  main.yml
molecule/centos7/: molecule.yml
molecule/centos8/: molecule.yml
molecule/debian10/: molecule.yml
molecule/debian8/: molecule.yml
molecule/debian9/: molecule.yml
molecule/fedora/: molecule.yml
molecule/shared/: converge.yml  playbook.yml  prepare.yml
molecule/ubuntu1604/: molecule.yml
molecule/ubuntu1804/: molecule.yml
molecule/ubuntu2004/: converge.yml  molecule.yml
molecule/ubuntu2204/: molecule.yml
molecule/ubuntu2404/: molecule.yml
tasks/: config.yml  debian.yml  fedora.yml  main.yml  rabbitmq_clustering.yml  rabbitmq_config.yml  rabbitmq_ha_config.yml  rabbitmq_plugins.yml  rabbitmq_queues.yml  rabbitmq_users.yml  rabbitmq_vhosts.yml  redhat.yml
templates/: erlang.cookie.j2  init.defaults.j2
templates/etc/rabbitmq/: rabbitmq-env.conf.j2  rabbitmq.config.j2
