[tool.poetry]
name = "ansible-rabbitmq"
version = "0.1.0"
description = ""
authors = ["Larry Smith Jr. <mrlesmithjr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^3.3.0"

[tool.poetry.dev-dependencies]
ansible-lint = "^5.0.7"
molecule = {extras = ["docker"], version = "^3.3.0"}
yamllint = "^1.26.1"
flake8 = "^3.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
