[tool.poetry]
name = "ansible-rabbitmq"
version = "0.1.0"
description = ""
authors = ["Larry Smith Jr. <mrlesmithjr@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
ansible = "6.7.0"

[tool.poetry.group.dev.dependencies]
ansible-lint = "6.8.7"
black = "^24.8.0"
pylint = "^3.2.7"
molecule = {extras = ["docker"], version = "^4.0.3"}
flake8 = "^7.1.2"
cookiecutter = "^2.6.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
